<resources>
    <string name="app_name">高考倒计时</string>
    <string name="tv1">距</string>
    <string name="tv2">年高考仅有</string>
    <string name="tv1_1">高考加油！</string>
    <string name="plus">加</string>
    <string name="oil">油</string>
    <string name="singal">!</string>
    <string name="none"></string>
    <string name="fighting">fighting!</string>
    <string name="button_style">控件样式</string>
    <string name="exit">退出</string>
    <string name="background_color">背景颜色</string>
    <string name="about">关于</string>
<string name="content">内容</string>
    <string name="diy">自定义文字</string>
    <string name="ok">确定</string>
<string name="cancle">取消</string>
    <string name="saveok">保存成功</string>
    <string name="delectok">删除成功</string>
    <string name="setok">设置成功</string>
    <string name="data">/Android/data/com.fastkylin.timer/files/data/</string>
    <string name="data_en">data</string>
    <string name="data_content">/Android/data/com.fastkylin.timer2/files/data/content</string>
    <string name="data_a"></string>
    <string name="data_r"></string>
    <string name="data_g"></string>
    <string name="data_b"></string>
<string name="back_tv0">纯洁的白色</string>
    <string name="back_tv1">低调的灰色</string>
    <string name="back_tv2">激情的紫色</string>
    <string name="back_tv3">深沉的绿色</string>
    <string name="back_tv4">温和的粉色</string>
    <string name="back_tv5">阳光的黄色</string>
    <string name="back_tv6">快乐的蓝色</string>
    <string name="back_tv7">宽容的绿色</string>
    <string name="back_more">懒得做了</string>
    <string name="about_app">关于高考倒计时</string>
    <string name="about_tv1">版本 1.2</string>
    <string name="about_tv2">仅仅只为高考倒计时</string>
    <string name="about_tv3">嘤嘤嘤竹鼠商说：\n做这个软件太麻烦了，真是要多麻烦有多麻烦。\n干脆咱开源吧！让大家一起来做！</string>
    <string name="about_tv4">了解Github上的源码</string>
    <string name="about_tv5">评个分吧</string>
    <string name="about_tv6">提交BUG给开发者</string>
    <string name="about_tv7"></string>
    <string name="about_noqq">木有找到QQ</string>
    <string name="about_nomarket">木有找到应用市场</string>
</resources>
