<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".backActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back">
        <TextView
            android:id="@+id/back"
            android:background="@drawable/back_new"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<TextView
    android:layout_margin="2dp"
    android:id="@+id/tv0"
    android:gravity="center"
    android:text="@string/back_tv0"
    android:textSize="30dp"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/color_back0"/>
        <TextView
            android:id="@+id/tv1"
            android:gravity="center"
            android:text="@string/back_tv1"
            android:textSize="30dp"
            android:textColor="@color/colorback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_back1"/>
        <TextView
            android:id="@+id/tv2"
            android:gravity="center"
            android:text="@string/back_tv2"
            android:textColor="@color/colorback"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_back2"/>
        <TextView
            android:id="@+id/tv3"
            android:gravity="center"
            android:text="@string/back_tv3"
            android:textSize="30dp"
            android:textColor="@color/colorback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_back3"/>
        <TextView
            android:id="@+id/tv4"
            android:gravity="center"
            android:text="@string/back_tv4"
            android:textSize="30dp"
            android:textColor="@color/colorback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_back4"/>
        <TextView
            android:id="@+id/tv5"
            android:gravity="center"
            android:text="@string/back_tv5"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_back5"/>
        <TextView
            android:id="@+id/tv6"
            android:gravity="center"
          android:text="@string/back_tv6"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_back6"/>
        <TextView
            android:id="@+id/tv7"
            android:gravity="center"
            android:text="@string/back_tv7"
            android:textColor="@color/colorback"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_back7"/>
<TextView
    android:textSize="30dp"
    android:gravity="center"
    android:text="@string/back_more"
    android:layout_width="match_parent"
    android:layout_height="60dp" />



    </LinearLayout></ScrollView>
</LinearLayout>