<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main_DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fastkylin.timer2.MainActivity">


    <LinearLayout
        android:id="@+id/back0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/back1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorback">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="30dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/back2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorback"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_sencond"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_selector"
                android:text="0"
                android:textColor="#fa7e02"
                android:textSize="100dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/back3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorback">

            <Button
                android:id="@+id/btn_day"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/btn_selector"
                android:textColor="@color/color_dms_t"
                android:textSize="30dp" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_selector7"
                android:text="D"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_hour"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/btn_selector"
                android:textColor="@color/color_dms_t"
                android:textSize="30dp" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_selector7"
                android:text="H"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btn_mini"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/btn_selector"
                android:textColor="@color/color_dms_t"
                android:textSize="30dp" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_selector7"
                android:text="M"
                android:textSize="20dp" />
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/now_time"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="16dp"
        android:textColor="@color/color1"
        android:text="@string/about"/>

    <TextView
        android:id="@+id/diy_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="60dp"
        android:gravity="center"
        android:text="@string/diy"
        android:textColor="@color/colorAccent"/>
</LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:id="@+id/Main_LeftLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:orientation="vertical"
>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="20dp" />
    <TextView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@mipmap/ic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="220dp" />


        <Button
            android:id="@+id/btn_back"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:textColor="@color/color_dms_t"
            android:layout_margin="6dp"
            android:textSize="15dp"
            android:background="@drawable/btn_selector"
            android:text="@string/background_color" />


        <Button
            android:id="@+id/btn_theme"
            android:layout_width="80dp"
            android:textColor="@color/color_dms_t"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:layout_margin="6dp"
            android:background="@drawable/btn_selector"
            android:text="@string/button_style" />
        <Button
            android:id="@+id/btn_diytext"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:background="@drawable/btn_selector"
            android:text="@string/diy"
            android:textColor="@color/color_dms_t"
            android:textSize="15dp" />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
        <Button
            android:id="@+id/btn_about"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:background="@drawable/btn_selector"
            android:text="@string/about"
            android:textColor="@color/color_dms_t"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:background="@drawable/btn_selector"
            android:text="@string/exit"
            android:textColor="@color/color_dms_t"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>
</android.support.v4.widget.DrawerLayout>

